New versioning scheme

--- a/musl.conf
+++ b/musl.conf
@@ -5,7 +5,7 @@ CONSTANTS = {
   "version": "1.1.22",
 } 
 
-pre("mkdir ~/workspace/%(name)s" % CONSTANTS)
+pre("mkdir ~/workspace")
 
 checkout(url="https://www.musl-libc.org/releases/musl-%(version)s.tar.gz" % CONSTANTS)
 
@@ -13,15 +13,23 @@ config("cd src; CC=clang ./configure --prefix=/")
 
 build("make -j2 -C src")
 
-install("DESTDIR=~/workspace/%(name)s make -C src install" % CONSTANTS)
+install("""
+  mkdir ~/workspace/%(name)s-dev
+  DESTDIR=~/workspace/%(name)s-dev make -C src install
+  mkdir -p ~/workspace/%(name)s/lib
+  mv ~/workspace/%(name)s-dev/lib/libc.so ~/workspace/%(name)s/lib
+  mv ~/workspace/%(name)s-dev/lib/ld-musl-x86_64.so.1 ~/workspace/%(name)s/lib
+""" % CONSTANTS)
 
 package("""
   mkdir ~/package
   cd ~/workspace/%(name)s
   tar cf ~/package/%(name)s-%(version)s.tar *
   gzip ~/package/%(name)s-%(version)s.tar
-  echo NAME=%(name)s > ~/package/version.txt
-  echo VERSION=%(version)s >> ~/package/version.txt
-  echo FILE=%(name)s-%(version)s.tar.gz >> ~/package/version.txt
+  tar cf ~/package/%(name)s-dev-%(version)s.tar *
+  gzip ~/package/%(name)s-dev-%(version)s.tar
+  echo %(name)s_VERSION=%(version)s > ~/package/version.txt
+  echo %(name)s_FILE=%(name)s-%(version)s.tar.gz >> ~/package/version.txt
+  echo %(name)s-dev_VERSION=%(version)s >> ~/package/version.txt
+  echo %(name)s-dev_FILE=%(name)s-%(version)s.tar.gz >> ~/package/version.txt
 """ % CONSTANTS)
-
