--- a/musl.conf
+++ b/musl.conf
@@ -24,10 +24,11 @@ package("""
   cd ~/workspace/%(name)s
   tar cf ~/package/%(name)s-%(version)s.tar *
   gzip ~/package/%(name)s-%(version)s.tar
+  cd ~/workspace/%(name)s-dev
   tar cf ~/package/%(name)s-dev-%(version)s.tar *
   gzip ~/package/%(name)s-dev-%(version)s.tar
   echo %(name)s_VERSION=%(version)s > ~/package/version.txt
   echo %(name)s_FILE=%(name)s-%(version)s.tar.gz >> ~/package/version.txt
   echo %(name)s-dev_VERSION=%(version)s >> ~/package/version.txt
-  echo %(name)s-dev_FILE=%(name)s-%(version)s.tar.gz >> ~/package/version.txt
+  echo %(name)s-dev_FILE=%(name)s-dev-%(version)s.tar.gz >> ~/package/version.txt
 """ % CONSTANTS)
