--- a/musl.conf
+++ b/musl.conf
@@ -31,4 +31,5 @@ package("""
   echo %(name)s_FILE=%(name)s-%(version)s.tar.gz >> ~/package/version.txt
   echo %(name)s-dev_VERSION=%(version)s >> ~/package/version.txt
   echo %(name)s-dev_FILE=%(name)s-dev-%(version)s.tar.gz >> ~/package/version.txt
+  echo %(name)s-dev_BASE=musl >> ~/package/version.txt
 """ % CONSTANTS)
