Move transitive gcc dependency to CI to unify bootstrap and 0.01 dependencies

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,7 @@ jobs:
   musl:
     executor: alpine
     steps:
-      - run: apk add ca-certificates 
+      - run: apk add ca-certificates gcc
       - checkout
       - attach_workspace:
           at: ~/workspace
