--- a/musl.conf
+++ b/musl.conf
@@ -1,4 +1,4 @@
-dependencies("ca-certificates make curl clang gcc libarchive-tools")
+dependencies("ca-certificates make curl clang libarchive-tools")
 
 CONSTANTS = { 
   "name": "musl",
