Fix working directory

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ executors:
   esplinux-bootstrap:
     docker:
       - image: esplinux/bootstrap
-    working_directory: ~/
+    working_directory: /
     environment:
       VERSION: "0.01"
 
