Make sure workspace exists before building

--- a/musl.conf
+++ b/musl.conf
@@ -5,6 +5,8 @@ CONSTANTS = {
   "version": "1.1.22",
 } 
 
+pre("mkdir -p ~/workspace/%(name)s" % CONSTANTS)
+
 checkout(url="https://www.musl-libc.org/releases/musl-%(version)s.tar.gz" % CONSTANTS)
 
 config("cd src; CC=clang ./configure --prefix=/")
@@ -14,7 +16,7 @@ build("make -j2 -C src")
 install("""
   mkdir ~/workspace/%(name)s-dev
   DESTDIR=~/workspace/%(name)s-dev make -C src install
-  mkdir -p ~/workspace/%(name)s/lib
+  mkdir ~/workspace/%(name)s/lib
   mv ~/workspace/%(name)s-dev/lib/libc.so ~/workspace/%(name)s/lib
   mv ~/workspace/%(name)s-dev/lib/ld-musl-x86_64.so.1 ~/workspace/%(name)s/lib
 """ % CONSTANTS)
