Fix mkdir paths

--- a/musl.conf
+++ b/musl.conf
@@ -12,7 +12,7 @@ config("cd src; CC=clang ./configure --prefix=/")
 build("make -j2 -C src")
 
 install("""
-  mkdir /workspace/%(name)s-dev
+  mkdir -p /workspace/%(name)s-dev
   DESTDIR=/workspace/%(name)s-dev make -C src install
   mkdir -p /workspace/%(name)s/lib
   mv /workspace/%(name)s-dev/lib/libc.so /workspace/%(name)s/lib
