Use new espbuild pattern

--- a/musl.conf
+++ b/musl.conf
@@ -1,4 +1,4 @@
-dependencies("ca-certificates make zlib openssl curl llvm clang libarchive-tools")
+dependencies("ca-certificates make zlib openssl curl llvm clang")
 
 CONSTANTS = { 
   "name": "musl",
@@ -7,13 +7,13 @@ CONSTANTS = {
 
 checkout(url="https://www.musl-libc.org/releases/musl-%(version)s.tar.gz" % CONSTANTS)
 
-config("cd src; CC=clang ./configure --prefix=/")
+config("cd musl-%(version)s; CC=clang ./configure --prefix=/" % CONSTANTS)
 
-build("make -j2 -C src")
+build("make -j2 -C musl-%(version)s" % CONSTANTS)
 
 install("""
   mkdir -p /workspace/%(name)s-dev
-  DESTDIR=/workspace/%(name)s-dev make -C src install
+  DESTDIR=/workspace/%(name)s-dev make -C musl-%(version)s install
   mkdir -p /workspace/%(name)s/lib
   mv /workspace/%(name)s-dev/lib/libc.so /workspace/%(name)s/lib
   mv /workspace/%(name)s-dev/lib/ld-musl-x86_64.so.1 /workspace/%(name)s/lib
