Migrate to drone.io

--- a/musl.conf
+++ b/musl.conf
@@ -1,4 +1,4 @@
-dependencies("ca-certificates make zlib openssl curl llvm clang")
+dependencies("ca-certificates make curl clang")
 
 CONSTANTS = {
   "name": "musl",
