--- a/musl.conf
+++ b/musl.conf
@@ -1,37 +1,35 @@
-dependencies("ca-certificates make zlib openssl curl llvm clang libarchive-tools")
+dependencies("ca-certificates make zlib openssl curl llvm clang")
 
-CONSTANTS = { 
+CONSTANTS = {
   "name": "musl",
   "version": "1.1.22",
-} 
-
-pre("mkdir -p ~/workspace/%(name)s" % CONSTANTS)
+}
 
 checkout(url="https://www.musl-libc.org/releases/musl-%(version)s.tar.gz" % CONSTANTS)
 
-config("cd src; CC=clang ./configure --prefix=/")
+config("cd musl-%(version)s; CC=clang ./configure --prefix=/" % CONSTANTS)
 
-build("make -j2 -C src")
+build("make -j2 -C musl-%(version)s" % CONSTANTS)
 
 install("""
-  mkdir ~/workspace/%(name)s-dev
-  DESTDIR=~/workspace/%(name)s-dev make -C src install
-  mkdir ~/workspace/%(name)s/lib
-  mv ~/workspace/%(name)s-dev/lib/libc.so ~/workspace/%(name)s/lib
-  mv ~/workspace/%(name)s-dev/lib/ld-musl-x86_64.so.1 ~/workspace/%(name)s/lib
+  mkdir -p /workspace/%(name)s-dev
+  DESTDIR=/workspace/%(name)s-dev make -C musl-%(version)s install
+  mkdir -p /workspace/%(name)s/lib
+  mv /workspace/%(name)s-dev/lib/libc.so /workspace/%(name)s/lib
+  mv /workspace/%(name)s-dev/lib/ld-musl-x86_64.so.1 /workspace/%(name)s/lib
 """ % CONSTANTS)
 
 package("""
-  mkdir ~/package
-  cd ~/workspace/%(name)s
-  tar cf ~/package/%(name)s-%(version)s.tar *
-  gzip ~/package/%(name)s-%(version)s.tar
-  cd ~/workspace/%(name)s-dev
-  tar cf ~/package/%(name)s-dev-%(version)s.tar *
-  gzip ~/package/%(name)s-dev-%(version)s.tar
-  echo %(name)s_VERSION=%(version)s > ~/package/version.txt
-  echo %(name)s_FILE=%(name)s-%(version)s.tar.gz >> ~/package/version.txt
-  echo %(name)s_URL="https://github.com/esplinux-core/%(name)s/releases/download" >> ~/package/version.txt
-  echo %(name)s-dev_FILE=%(name)s-dev-%(version)s.tar.gz >> ~/package/version.txt
-  echo %(name)s-dev_BASE=musl >> ~/package/version.txt
+  mkdir /package
+  cd /workspace/%(name)s
+  tar cf /package/%(name)s-%(version)s.tar *
+  gzip /package/%(name)s-%(version)s.tar
+  cd /workspace/%(name)s-dev
+  tar cf /package/%(name)s-dev-%(version)s.tar *
+  gzip /package/%(name)s-dev-%(version)s.tar
+  echo %(name)s_VERSION=%(version)s > /package/version.txt
+  echo %(name)s_FILE=%(name)s-%(version)s.tar.gz >> /package/version.txt
+  echo %(name)s_URL="https://github.com/esplinux-core/%(name)s/releases/download" >> /package/version.txt
+  echo %(name)s-dev_FILE=%(name)s-dev-%(version)s.tar.gz >> /package/version.txt
+  echo %(name)s-dev_BASE=musl >> /package/version.txt
 """ % CONSTANTS)
